shellfirm/tests/snapshots/checks__git-worktree_management.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-worktree_management.yaml",
        test: "git worktree add ../other",
        check_detection_ids: [
            "git:worktree_management",
        ],
        test_description: "match add worktree",
    },
    TestSensitivePatternsResult {
        file_path: "git-worktree_management.yaml",
        test: "git worktree remove ../other",
        check_detection_ids: [
            "git:worktree_management",
        ],
        test_description: "match remove worktree",
    },
    TestSensitivePatternsResult {
        file_path: "git-worktree_management.yaml",
        test: "git worktree add -f ../other",
        check_detection_ids: [
            "git:worktree_management",
        ],
        test_description: "match force add worktree",
    },
    TestSensitivePatternsResult {
        file_path: "git-worktree_management.yaml",
        test: "git worktree remove -f ../other",
        check_detection_ids: [
            "git:worktree_management",
        ],
        test_description: "match force remove worktree",
    },
]
