shellfirm/tests/snapshots/checks__heroku-destroy_addons.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_addons.yaml",
        test: "heroku addons:destroy",
        check_detection_ids: [
            "heroku:destroy_addons",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_addons.yaml",
        test: "heroku   addons:destroy",
        check_detection_ids: [
            "heroku:destroy_addons",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_addons.yaml",
        test: "herokuu addons:destroy",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
