shellfirm/tests/snapshots/checks__heroku-destroy_app.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_app.yaml",
        test: "heroku apps:destroy",
        check_detection_ids: [
            "heroku:destroy_app",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_app.yaml",
        test: "heroku   apps:destroy",
        check_detection_ids: [
            "heroku:destroy_app",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_app.yaml",
        test: "herokuu apps:destroy",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
