shellfirm/tests/snapshots/checks__heroku-destroy_client.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_client.yaml",
        test: "heroku clients:destroy",
        check_detection_ids: [
            "heroku:destroy_client",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_client.yaml",
        test: "heroku   clients:destroy",
        check_detection_ids: [
            "heroku:destroy_client",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-destroy_client.yaml",
        test: "herokue clients:destroy",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
