shellfirm/tests/snapshots/checks__heroku-detach_addon.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-detach_addon.yaml",
        test: "heroku addons:detach",
        check_detection_ids: [
            "heroku:detach_addon",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-detach_addon.yaml",
        test: "heroku   addons:detach",
        check_detection_ids: [
            "heroku:detach_addon",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-detach_addon.yaml",
        test: "herokuu addons:detach",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
