shellfirm/tests/snapshots/checks__heroku-disable_app_feature.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-disable_app_feature.yaml",
        test: "heroku features:disable",
        check_detection_ids: [
            "heroku:disable_app_feature",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-disable_app_feature.yaml",
        test: "heroku  features:disable",
        check_detection_ids: [
            "heroku:disable_app_feature",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-disable_app_feature.yaml",
        test: "herokuu features:disable",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
