shellfirm/tests/snapshots/checks__heroku-enable_maintenance_mode.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-enable_maintenance_mode.yaml",
        test: "heroku maintenance:on",
        check_detection_ids: [
            "heroku:enable_maintenance_mode",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-enable_maintenance_mode.yaml",
        test: "heroku   maintenance:on",
        check_detection_ids: [
            "heroku:enable_maintenance_mode",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-enable_maintenance_mode.yaml",
        test: "herokuu maintenance:on",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
