shellfirm/tests/snapshots/checks__heroku-kill_app_dynos.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-kill_app_dynos.yaml",
        test: "heroku ps:kill",
        check_detection_ids: [
            "heroku:kill_app_dynos",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-kill_app_dynos.yaml",
        test: "heroku   ps:kill",
        check_detection_ids: [
            "heroku:kill_app_dynos",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-kill_app_dynos.yaml",
        test: "herokuu ps:kill",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
