shellfirm/tests/snapshots/checks__heroku-remove_app_container.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-remove_app_container.yaml",
        test: "heroku container:rm",
        check_detection_ids: [
            "heroku:remove_app_container",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_app_container.yaml",
        test: "heroku   container:rm",
        check_detection_ids: [
            "heroku:remove_app_container",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_app_container.yaml",
        test: "herokuu container:rm",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
