shellfirm/tests/snapshots/checks__heroku-remove_member.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-remove_member.yaml",
        test: "heroku members:remove",
        check_detection_ids: [
            "heroku:remove_member",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_member.yaml",
        test: "heroku  members:remove",
        check_detection_ids: [
            "heroku:remove_member",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_member.yaml",
        test: "herokuu members:remove",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
